--- a/my-app/src/pages/home/index.html
+++ b/my-app/src/pages/home/index.html
@@ -28,7 +28,7 @@
           <nav>
             <ul class="menu">
               <li class="menu__item">
-                <a href="#"> Home </a>
+                <a href="/webdoan"> Home </a>
               </li>
               <li class="menu__item">
                 <a href="./store/index.html"> Store </a>
@@ -70,7 +70,7 @@
               The people, food and the prime location make the perfect place for
               good friends & family to come together and have great time.
             </p>
-            <button src="/Store.js">View Menu</button>
+            <button src="./Store.js">View Menu</button>
           </div>
           <div class="image">
             <div class="image-wrapper">
